# mi-note

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: main.rs  state.rs  webview.rs
src/api/: auth.rs  client.rs  config.rs  mod.rs  models.rs
src/gui/: launch_bar.rs  mod.rs  settings.rs
