[package]
name = "mi-note-webview"
version = "0.1.0"
edition = "2024"

[dependencies]
native-windows-gui = { version = "1.0.13", features = ["image-decoder"] }
native-windows-derive = "1.0.3"
 clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
windows-sys = { version = "0.52", features = [
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader"
] }
directories = "5.0"
pulldown-cmark = "0.9"
chrono = "0.4"
webview2 = "0.1"
winapi = { version = "0.3.9", features = ["windef", "winuser", "combaseapi", "libloaderapi", "winnt", "objbase", "commctrl"] }
webview2-sys = "0.1.1"
com = "0.2.0"
widestring = "0.5.1"

[build-dependencies]
winres = "0.1"
